08-3tier-devsecops-cicd/application-tier/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: application
  labels:
    app: api
    tier: application
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
